welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estSurBiscuit()==false) {
	if(estSurBiscuit()==true) {
		prendBisuit() ;      }
 
avance() ;  }
